--- a/stockGenie/.gitignore
+++ b/stockGenie/.gitignore
@@ -19,12 +19,12 @@ yarn-error.log
 /.idea
 /.vscode
 # Ignore image files
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.bmp
-*.tiff
-*.ico
-*.svg
-*.webp
+# *.jpg
+# *.jpeg
+# *.png
+# *.gif
+# *.bmp
+# *.tiff
+# *.ico
+# *.svg
+# *.webp
