--- a/mediCash/.gitignore
+++ b/mediCash/.gitignore
@@ -19,14 +19,14 @@ yarn-error.log
 /.idea
 /.vscode
 # Ignore image files
-# *.jpg
-# *.jpeg
-# *.png
-# *.gif
-# *.bmp
-# *.tiff
-# *.ico
-# *.svg
-# *.webp
-# /image/
-# /folder2/
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+*.tiff
+*.ico
+*.svg
+*.webp
+/image/
+/folder2/
